# LiveTradingv2-DRW-showcase

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  build_and_test.sh  deploy.sh  start.sh
accounts/: example.json
cmake/: CompilerWarnings.cmake  FetchDependencies.cmake
config/: default.json  inventory_test.json  recorder.json  test_btc5m.json
deploy/: polymarket-engine.service  setup-ubuntu.sh
src/: main.cpp
src/binance/: CMakeLists.txt  binance_message_parser.cpp  binance_message_parser.h  binance_types.h  binance_ws_client.cpp  binance_ws_client.h
src/book/: CMakeLists.txt  book_types.h  order_book.cpp  order_book.h
src/common/: CMakeLists.txt  account.cpp  account.h  balance_fetcher.cpp  balance_fetcher.h  clock.cpp  clock.h  config.cpp  config.h  derive_api_key.cpp  derive_api_key.h  discovery.cpp  discovery.h  error.h  market_pair.h  pnl_tracker.h  position_bootstrap.cpp  position_bootstrap.h  price.cpp  price.h  thread_pin.h  token_inventory.h  types.h
src/crypto/: CMakeLists.txt  eip712.cpp  eip712.h  hex_utils.cpp  hex_utils.h  hmac_sha256.cpp  hmac_sha256.h  keccak.cpp  keccak.h  order_signer.cpp  order_signer.h
src/events/: CMakeLists.txt  book_delta.h  event_variant.h  market_events.h  scheduler_events.h  user_events.h
src/exec/: CMakeLists.txt  exec_feedback.h  exec_intent.h  exec_queue_sink.h  execution_gateway.cpp  execution_gateway.h  heartbeat_manager.cpp  heartbeat_manager.h  inventory_safety.h  order_builder.cpp  order_builder.h  rate_limiter.cpp  rate_limiter.h
src/inventory/: CMakeLists.txt  abi_encoder.cpp  abi_encoder.h  inventory_queue_sink.cpp  inventory_queue_sink.h  inventory_service.cpp  inventory_service.h  inventory_sink.h  polygon_rpc_client.cpp  polygon_rpc_client.h  proxy_tx_builder.cpp  proxy_tx_builder.h  relayer_auth.cpp  relayer_auth.h  relayer_client.cpp  relayer_client.h  rlp_encoder.cpp  rlp_encoder.h  safe_tx_builder.cpp  safe_tx_builder.h  tx_builder.cpp  tx_builder.h
src/logger/: CMakeLists.txt  async_logger.cpp  async_logger.h  log_entry.h  metrics.cpp  metrics.h
src/parser/: CMakeLists.txt  market_message_parser.cpp  market_message_parser.h  user_message_parser.cpp  user_message_parser.h
src/queue/: CMakeLists.txt  spsc_queue.h
src/recorder/: CMakeLists.txt  data_recorder.cpp  data_recorder.h  journal_types.h  journal_writer.h  record_types.h
src/rest/: CMakeLists.txt  http2_client.cpp  http2_client.h  rest_auth.cpp  rest_auth.h  rest_client.cpp  rest_client.h  rest_response_parser.cpp  rest_response_parser.h  rest_transport.cpp  rest_transport.h  rest_types.h
src/rotation/: CMakeLists.txt  rotation_coordinator.cpp  rotation_coordinator.h
src/rtds/: CMakeLists.txt  rtds_message_parser.cpp  rtds_message_parser.h  rtds_types.h  rtds_ws_client.cpp  rtds_ws_client.h
src/scheduler/: CMakeLists.txt  dry_run_simulator.cpp  dry_run_simulator.h  exec_intent_stub_sink.cpp  exec_intent_stub_sink.h  exec_sink.h  execution_mode.h  inventory_test_strategy.cpp  inventory_test_strategy.h  mode_filtered_sink.cpp  mode_filtered_sink.h  quote_planner.cpp  quote_planner.h  quoter_v2_strategy.cpp  quoter_v2_strategy.h  risk_gate.cpp  risk_gate.h  risk_gate_stub.cpp  risk_gate_stub.h  strategy.h  strategy_book_store.cpp  strategy_book_store.h  strategy_context.h  strategy_scheduler.cpp  strategy_scheduler.h  strategy_scheduler_stub.cpp  strategy_scheduler_stub.h  strategy_state_stub.cpp  strategy_state_stub.h  strategy_stub.cpp  strategy_stub.h  test_strategy.cpp  test_strategy.h  trading_session.h  working_order_tracker.cpp  working_order_tracker.h
src/slot/: CMakeLists.txt  market_slot_manager.cpp  market_slot_manager.h  market_slot_types.h  slot_token_map.h
src/state/: CMakeLists.txt  exec_state_store.cpp  exec_state_store.h  (+2 more)
src/ui_bridge/: CMakeLists.txt  account_poll_service.cpp  account_poll_service.h  btc_series_registry.cpp  btc_series_registry.h  ipc_bridge.cpp  ipc_bridge.h  series_rolling_fsm.cpp  series_rolling_fsm.h  ui_command_parser.cpp  ui_command_parser.h  ui_serializer.cpp  ui_serializer.h  ui_types.h  watch_manager.cpp  watch_manager.h  watcher_book_store.cpp  watcher_book_store.h  watcher_service.cpp  watcher_service.h  watcher_types.h
src/ws/: CMakeLists.txt  market_ws_client.cpp  market_ws_client.h  user_ws_client.cpp  user_ws_client.h
tests/: CMakeLists.txt  test_abi_encoder.cpp  test_account.cpp  test_binance_message_parser.cpp  test_binance_status_emission.cpp  test_btc_series_registry.cpp  test_config.cpp  test_data_recorder.cpp  test_eip712.cpp  test_exec_gateway_integration.cpp  test_exec_state_store.cpp  test_heartbeat_manager.cpp  test_hmac_sha256.cpp  test_http2_client.cpp  test_integration_t0_pipeline.cpp  test_inventory_test_strategy.cpp  test_journal_writer.cpp  test_keccak.cpp  test_m4_audit.cpp  test_m4_audit_r2.cpp  test_market_message_parser.cpp  test_market_state_store.cpp  test_mode_filtered_sink.cpp  test_order_book.cpp  test_order_builder.cpp  test_order_signer.cpp  test_pnl_tracker.cpp  test_position_bootstrap.cpp  test_price.cpp  test_proxy_tx_builder.cpp  test_rate_limiter.cpp  test_relayer_auth.cpp  test_rest_auth.cpp  test_rest_response_parser.cpp  test_risk_gate.cpp  test_rlp_encode.cpp  test_rotation.cpp  test_rtds_message_parser.cpp  test_rtds_scheduler_integration.cpp  test_safe_tx_builder.cpp  (+18 more)
tests/fixtures/: best_bid_ask.json  book_snapshot.json  last_trade_price.json  price_change_batch.json  price_change_single.json  rest_cancel_response.json  rest_error_429.json  rest_error_503.json  rest_heartbeat_response.json  rest_order_response.json  tick_size_change.json  user_malformed.json  user_order_cancellation.json  user_order_filled.json  user_order_placement.json  user_order_update.json  user_trade_confirmed.json  user_trade_failed.json  user_trade_matched.json  user_trade_matched_with_maker_orders.json
tests/token_pair_support/: test_audit_fixes.cpp  test_complement_math.cpp  test_inventory_safety.cpp  test_quote_planner.cpp  test_token_pair_integration.cpp
tools/: analyze_rtds.py  convert_to_parquet.py  dump_journal.py  recorder.py
(+46 files in other folders)
